# ERPJAUNE

./: .env  .env.example  .gitignore
app/: main.py
app/core/: config.py  middleware.py
app/dependencies/: auth_dependencies.py  db-dependencies.py  tenant-dependencies.py
app/events/: event_bus.py  handlers.py
app/models/: audit.py  inventory.py  invoice.py  user.py
app/routers/: auth.py  products.py
app/schemas/: invoice.py  tenant.py
app/services/: invoice-service.py
app/utils/: pagination.py
backend/: .env.example  create_user.py  init_db.py  pyproject.toml
backend/app/: main.py
backend/app/core/: auth.py  config.py  database.py
backend/app/models/: customer.py  permission.py  product.py  role.py  sales.py  tenant.py
backend/app/routers/: __init__.py  auth.py
backend/app/schemas/: customer.py  inventory.py  product.py  sales.py  user.py
backend/app/services/: auth-service.py  inventory-service.py  product-service.py  report-service.py  sales-service.py  tenant-service.py  user-service.py
backend/app/utils/: constants.py  enuns.py  helpers.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/services/: api.ts
frontend/src/: App.tsx  AuthContext.tsx  Dashboard.tsx  ProtectedRoute.tsx  TopBar.tsx  env.d.ts  hello.test.ts  index.css  main.tsx
frontend/src/components/common/: ErrorMessage.tsx  Loader.tsx
frontend/src/pages/: Login.tsx  Products.tsx
frontend/src/pages/Dashboard/: Dashboard.tsx
frontend/src/pages/Products/: Products.tsx
frontend/src/services/: api.ts
(+1 files in other folders)
